first and second question added

--- a/index.html
+++ b/index.html
@@ -82,13 +82,89 @@
 				<h2>Pytanie 3</h2>
 			</div>
 			<div class="content row">
-				<video class="item" src="video/small.ogv">
+				<video class="item"  src="video/what-cat.webm">
 					Sorry, your browser doesn't support embedded videos, but don't worry, you can <a href="videofile.ogg">download it</a> and watch it with your favorite video player!
 				</video>
 			</div>
 			<div class="answers row">
-				<input id="answer-1-1" type="checkbox" name="sometext" />
-				<label for="answer-1-1">Odpowiedź 1</label>
+				<div class="question-content">
+					<h3>Jaki gatunek kota jest widoczny na filmie:</h3>
+				</div>
+				<div class="radio">
+					<label>
+						<input type="radio" name="answers-3"> Maine Coon
+					</label>
+				</div>
+				<div class="radio">
+					<label>
+						<input type="radio" name="answers-3"> Kot Brytyjski
+					</label>
+				</div>
+				<div class="radio">
+					<label>
+						<input type="radio" name="answers-3"> Kot Syjamski
+					</label>
+				</div>
+			</div>
+		</div>
+		<div id="question-4" class="jumbotron question">
+			<div class="header row">
+				<h2>Pytanie 4</h2>
+			</div>
+			<div class="content row">
+				<video class="item"  src="video/what-cat.webm">
+					Sorry, your browser doesn't support embedded videos, but don't worry, you can <a href="videofile.ogg">download it</a> and watch it with your favorite video player!
+				</video>
+			</div>
+			<div class="answers row">
+				<div class="question-content">
+					<h3>Jaki gatunek kota jest widoczny na filmie:</h3>
+				</div>
+				<div class="radio">
+					<label>
+						<input type="radio" name="answers-4"> Maine Coon
+					</label>
+				</div>
+				<div class="radio">
+					<label>
+						<input type="radio" name="answers-4"> Kot Brytyjski
+					</label>
+				</div>
+				<div class="radio">
+					<label>
+						<input type="radio" name="answers-4"> Kot Syjamski
+					</label>
+				</div>
+			</div>
+		</div>
+		<div id="question-5" class="jumbotron question">
+			<div class="header row">
+				<h2>Pytanie 5</h2>
+			</div>
+			<div class="content row">
+				<video class="item"  src="video/what-cat.webm">
+					Sorry, your browser doesn't support embedded videos, but don't worry, you can <a href="videofile.ogg">download it</a> and watch it with your favorite video player!
+				</video>
+			</div>
+			<div class="answers row">
+				<div class="question-content">
+					<h3>Jaki gatunek kota jest widoczny na filmie:</h3>
+				</div>
+				<div class="radio">
+					<label>
+						<input type="radio" name="answers-5"> Maine Coon
+					</label>
+				</div>
+				<div class="radio">
+					<label>
+						<input type="radio" name="answers-5"> Kot Brytyjski
+					</label>
+				</div>
+				<div class="radio">
+					<label>
+						<input type="radio" name="answers-5"> Kot Syjamski
+					</label>
+				</div>
 			</div>
 		</div>
 
