--- a/index.html
+++ b/index.html
@@ -82,27 +82,27 @@
 				<h2>Pytanie 3</h2>
 			</div>
 			<div class="content row">
-				<video class="item"  src="video/what-cat.webm">
+				<audio class="item"  src="audio/what_mood.mp3" controls="controls">
 					Sorry, your browser doesn't support embedded videos, but don't worry, you can <a href="videofile.ogg">download it</a> and watch it with your favorite video player!
-				</video>
+				</audio>
 			</div>
 			<div class="answers row">
 				<div class="question-content">
-					<h3>Jaki gatunek kota jest widoczny na filmie:</h3>
+					<h3>W jakim nastroju jest kot wydający taki dźwięk</h3>
 				</div>
 				<div class="radio">
 					<label>
-						<input type="radio" name="answers-3"> Maine Coon
+						<input type="radio" name="answers-3"> Zadowolony
 					</label>
 				</div>
 				<div class="radio">
 					<label>
-						<input type="radio" name="answers-3"> Kot Brytyjski
+						<input type="radio" name="answers-3"> Smutny
 					</label>
 				</div>
 				<div class="radio">
 					<label>
-						<input type="radio" name="answers-3"> Kot Syjamski
+						<input type="radio" name="answers-3"> Zły
 					</label>
 				</div>
 			</div>
