--- a/index.html
+++ b/index.html
@@ -112,27 +112,27 @@
 				<h2>Pytanie 4</h2>
 			</div>
 			<div class="content row">
-				<video class="item"  src="video/what-cat.webm">
+				<audio class="item"  src="audio/what-animal.mp3" controls="controls">
 					Sorry, your browser doesn't support embedded videos, but don't worry, you can <a href="videofile.ogg">download it</a> and watch it with your favorite video player!
-				</video>
+				</audio>
 			</div>
 			<div class="answers row">
 				<div class="question-content">
-					<h3>Jaki gatunek kota jest widoczny na filmie:</h3>
+					<h3>Jakie zwierze wydaje taki dźwięk:</h3>
 				</div>
 				<div class="radio">
 					<label>
-						<input type="radio" name="answers-4"> Maine Coon
+						<input type="radio" name="answers-4"> Kot
 					</label>
 				</div>
 				<div class="radio">
 					<label>
-						<input type="radio" name="answers-4"> Kot Brytyjski
+						<input type="radio" name="answers-4"> Mysz
 					</label>
 				</div>
 				<div class="radio">
 					<label>
-						<input type="radio" name="answers-4"> Kot Syjamski
+						<input type="radio" name="answers-4"> Pies
 					</label>
 				</div>
 			</div>
@@ -142,9 +142,9 @@
 				<h2>Pytanie 5</h2>
 			</div>
 			<div class="content row">
-				<video class="item"  src="video/what-cat.webm">
-					Sorry, your browser doesn't support embedded videos, but don't worry, you can <a href="videofile.ogg">download it</a> and watch it with your favorite video player!
-				</video>
+				<div>
+					blebleble
+				</div>
 			</div>
 			<div class="answers row">
 				<div class="question-content">
