--- a/index.html
+++ b/index.html
@@ -142,13 +142,16 @@
 				<h2>Pytanie 5</h2>
 			</div>
 			<div class="content row">
-				<div>
-					blebleble
+				<div class="item">
+					Zwierzęta ruchliwe, żywiołowe, z dużym temperamentem. Są bardzo przyjacielskie, uczuciowe. Nie są agresywne, nie mają również niszczycielskich zapędów. 
+					Koty te bardzo lubią wspinać się i skakać, co potwierdza ich częste odpoczywanie na wysokich półkach i szafach. 
+					Są wspaniałymi myśliwymi. Jest prawdopodobne, że mieszkańcy używali ich jako "stróża" domu, ponieważ potrafił reagować mruczeniem na widok zbliżającego się obcego. 
+					W rodzinie jest serdeczny i towarzyski, nienatarczywy, niezależny.
 				</div>
 			</div>
 			<div class="answers row">
 				<div class="question-content">
-					<h3>Jaki gatunek kota jest widoczny na filmie:</h3>
+					<h3>O jakim gatunku kota jest mowa w tekście:</h3>
 				</div>
 				<div class="radio">
 					<label>
@@ -162,7 +165,7 @@
 				</div>
 				<div class="radio">
 					<label>
-						<input type="radio" name="answers-5"> Kot Syjamski
+						<input type="radio" name="answers-5"> Kot Syberyski
 					</label>
 				</div>
 			</div>
