first version finished

--- a/index.html
+++ b/index.html
@@ -26,23 +26,23 @@
 					Sorry, your browser doesn't support embedded videos, but don't worry, you can <a href="videofile.ogg">download it</a> and watch it with your favorite video player!
 				</video>
 			</div>
-			<div class="answers row">
+			<div class="answers row" data-answer="2" data-correct="false">
 				<div class="question-content">
 					<h3>Jakie zwierze jest widoczne na filmie:</h3>
 				</div>
 				<div class="radio">
 					<label>
-						<input type="radio" name="answers-1"> Pies
+						<input type="radio" name="answers-1" data-answer="1"> Pies
+					</label>
+				</div>
+				<div class="radio">
+					<label class="marked">
+						<input type="radio" name="answers-1" data-answer="2"> Kot
 					</label>
 				</div>
 				<div class="radio">
 					<label>
-						<input type="radio" name="answers-1"> Kot
-					</label>
-				</div>
-				<div class="radio">
-					<label>
-						<input type="radio" name="answers-1"> Mysz
+						<input type="radio" name="answers-1" data-answer="3"> Mysz
 					</label>
 				</div>
 			</div>
@@ -56,23 +56,23 @@
 					Sorry, your browser doesn't support embedded videos, but don't worry, you can <a href="videofile.ogg">download it</a> and watch it with your favorite video player!
 				</video>
 			</div>
-			<div class="answers row">
+			<div class="answers row" data-answer="1" data-correct="false">
 				<div class="question-content">
 					<h3>Jaki gatunek kota jest widoczny na filmie:</h3>
 				</div>
 				<div class="radio">
-					<label>
-						<input type="radio" name="answers-2"> Maine Coon
+					<label class="marked">
+						<input type="radio" name="answers-2" data-answer="1"> Maine Coon
 					</label>
 				</div>
 				<div class="radio">
 					<label>
-						<input type="radio" name="answers-2"> Kot Brytyjski
+						<input type="radio" name="answers-2" data-answer="2"> Kot Brytyjski
 					</label>
 				</div>
 				<div class="radio">
 					<label>
-						<input type="radio" name="answers-2"> Kot Syjamski
+						<input type="radio" name="answers-2" data-answer="3"> Kot Syjamski
 					</label>
 				</div>
 			</div>
@@ -86,23 +86,23 @@
 					Sorry, your browser doesn't support embedded videos, but don't worry, you can <a href="videofile.ogg">download it</a> and watch it with your favorite video player!
 				</audio>
 			</div>
-			<div class="answers row">
+			<div class="answers row" data-answer="3" data-correct="false">
 				<div class="question-content">
 					<h3>W jakim nastroju jest kot wydający taki dźwięk</h3>
 				</div>
 				<div class="radio">
 					<label>
-						<input type="radio" name="answers-3"> Zadowolony
+						<input type="radio" name="answers-3" data-answer="1"> Zły
 					</label>
 				</div>
 				<div class="radio">
 					<label>
-						<input type="radio" name="answers-3"> Smutny
+						<input type="radio" name="answers-3" data-answer="2"> Smutny
 					</label>
 				</div>
 				<div class="radio">
-					<label>
-						<input type="radio" name="answers-3"> Zły
+					<label class="marked">
+						<input type="radio" name="answers-3" data-answer="3"> Zadowolony
 					</label>
 				</div>
 			</div>
@@ -116,23 +116,23 @@
 					Sorry, your browser doesn't support embedded videos, but don't worry, you can <a href="videofile.ogg">download it</a> and watch it with your favorite video player!
 				</audio>
 			</div>
-			<div class="answers row">
+			<div class="answers row" data-answer="1" data-correct="false">
 				<div class="question-content">
 					<h3>Jakie zwierze wydaje taki dźwięk:</h3>
 				</div>
 				<div class="radio">
-					<label>
-						<input type="radio" name="answers-4"> Kot
+					<label class="marked">
+						<input type="radio" name="answers-4" data-answer="1"> Kot
 					</label>
 				</div>
 				<div class="radio">
 					<label>
-						<input type="radio" name="answers-4"> Mysz
+						<input type="radio" name="answers-4" data-answer="2"> Mysz
 					</label>
 				</div>
 				<div class="radio">
 					<label>
-						<input type="radio" name="answers-4"> Pies
+						<input type="radio" name="answers-4" data-answer="3"> Pies
 					</label>
 				</div>
 			</div>
@@ -149,23 +149,23 @@
 					W rodzinie jest serdeczny i towarzyski, nienatarczywy, niezależny.
 				</div>
 			</div>
-			<div class="answers row">
+			<div class="answers row" data-answer="3" data-correct="false">
 				<div class="question-content">
 					<h3>O jakim gatunku kota jest mowa w tekście:</h3>
 				</div>
 				<div class="radio">
 					<label>
-						<input type="radio" name="answers-5"> Maine Coon
+						<input type="radio" name="answers-5" data-answer="1"> Maine Coon
 					</label>
 				</div>
 				<div class="radio">
 					<label>
-						<input type="radio" name="answers-5"> Kot Brytyjski
+						<input type="radio" name="answers-5" data-answer="2"> Kot Brytyjski
 					</label>
 				</div>
 				<div class="radio">
-					<label>
-						<input type="radio" name="answers-5"> Kot Syberyski
+					<label class="marked">
+						<input type="radio" name="answers-5" data-answer="3"> Kot Syberyski
 					</label>
 				</div>
 			</div>
