--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<h2>Pytanie 1</h2>
 			</div>
 			<div class="content row">
-				<video class="item"  src="video/what-animal.webm">
+				<video class="item"  src="video/what-animal.webm" controls="controls">
 					Sorry, your browser doesn't support embedded videos, but don't worry, you can <a href="videofile.ogg">download it</a> and watch it with your favorite video player!
 				</video>
 			</div>
@@ -52,7 +52,7 @@
 				<h2>Pytanie 2</h2>
 			</div>
 			<div class="content row">
-				<video class="item"  src="video/what-cat.webm">
+				<video class="item"  src="video/what-cat.webm" controls="controls">
 					Sorry, your browser doesn't support embedded videos, but don't worry, you can <a href="videofile.ogg">download it</a> and watch it with your favorite video player!
 				</video>
 			</div>
